Tweaking apidoc script

--- a/doc/build
+++ b/doc/build
@@ -1,17 +1,9 @@
 #!/bin/sh
 # 
-# build_docs
+# build
 # 
-# Builds API documentation for Cenozo using phpDocumentor.
+# Builds API documentation for Cenozo using apigen
 # @author Patrick Emond <emondpd@mcmaster.ca>
-
-if [ ! -d "html" ]; then
-  # create html/ if id doesn't already exist
-  mkdir html
-else
-  # clean out html/ of old files
-  rm -rf html/*
-fi
 
 # generate the documentation
 apigen --config apigen.conf
