--- a/app/settings.local.ini.php.sample
+++ b/app/settings.local.ini.php.sample
@@ -36,3 +36,10 @@ $settings['ldap']['base'] = '';
 $settings['ldap']['username'] = '';
 $settings['ldap']['password'] = '';
 $settings['ldap']['active_directory'] = true;
+
+// opal settings
+$settings['opal']['enabled'] = false;
+$settings['opal']['server'] = 'localhost';
+$settings['opal']['port'] = 8843;
+$settings['opal']['username'] = '';
+$settings['opal']['password'] = '';
