Moving some functionality out of applications into the cenozo framework

--- a/settings.local.ini.php.sample
+++ b/settings.local.ini.php.sample
@@ -22,6 +22,14 @@ $settings['url']['CENOZO'] = sprintf( 'http%s://%s/url/to/cenozo',
                                           'on' == $_SERVER["HTTPS"] ? 's' : '',
                                           $_SERVER["HTTP_HOST"] );
 
+// the path and url of Limesurvey
+$settings['path']['LIMESURVEY'] = '/path/to/limesurvey';
+$settings['url']['LIMESURVEY'] = 'http://url/to/limesurvey';
+
+// the credentials for the machine user
+$settings['general']['machine_user'] = 'machine username goes here';
+$settings['general']['machine_password'] = 'machine password goes here';
+
 // database settings (username and password are set in the application's settings)
 $settings['db']['server'] = 'localhost';
 $settings['db']['database_prefix'] = '';
@@ -42,3 +50,15 @@ $settings['opal']['server'] = 'localhost';
 $settings['opal']['port'] = 8843;
 $settings['opal']['username'] = '';
 $settings['opal']['password'] = '';
+
+// the Asterisk AJAM url, username and password
+$settings['voip']['enabled'] = false;
+$settings['voip']['url'] = 'localhost';
+$settings['voip']['username'] = '';
+$settings['voip']['password'] = '';
+$settings['voip']['prefix'] = '';
+
+// the base directory to write monitored calls
+// (must be an absolute path that the asterisk server's user has access to)
+$settings['path']['VOIP_MONITOR'] = '';
+$settings['url']['VOIP_MONITOR'] = 'monitor';
