--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,8 @@
     "angular-ui-router": "0.2.x",
     "jquery": "~2.1.1",
     "bootstrap": "~3.1.1",
+    "moment": "2.x.x",
+    "moment-timezone": "latest",
     "snapjs": "latest",
     "requirejs": "2.1.x",
     "angular-animate": "1.2.x",
