Fixing bugs ("sabretooth" should be "cenozo")

--- a/aux/extensions.conf
+++ b/aux/extensions.conf
@@ -1,4 +1,4 @@
-; dialplan to play audio in a channel (used by Sabretooth)
+; dialplan to play audio in a channel (used by Cenozo)
 exten => playback,1,Answer()
 exten => playback,n,UserEvent(BeforePlayBack,ActionID:${ActionID} & ${UNIQUEID} & ${CHANNEL} & ${Sound} & ${Volume} & ${ToChannel})
 exten => playback,n,Set(VOLUME(TX)=${Volume})
@@ -12,7 +12,7 @@ exten => playbackspy,n,ChanSpy(${ToChannel},qW)
 exten => playbackspy,n,UserEvent(AfterChanSpy,ActionID:${ActionID} & ${UNIQUEID} & ${CHANNEL} & ${Sound} & ${Volume} & ${ToChannel})
 exten => playbackspy,n,Hangup()
 
-; dialplan to spy on existing channel (used by Sabretooth)
+; dialplan to spy on existing channel (used by Cenozo)
 exten => chanspy,1,UserEvent(BeforeChanSpy,ActionID:${ActionID} & ${UNIQUEID} & ${CHANNEL} & ${ToChannel})
 exten => chanspy,n,ChanSpy(${ToChannel},q)
 exten => chanspy,n,UserEvent(AfterChanSpy,ActionID:${ActionID} & ${UNIQUEID} & ${CHANNEL} & ${ToChannel})
