Removing functionality for limesurvey being on a different webserver
This causes additional complicated issues (cross-domain javascript, for instance)
which is too complex to maintain.  The solution is to require limesurvey's web
code to be on the same webserver as the application.

--- a/settings.local.ini.php.sample
+++ b/settings.local.ini.php.sample
@@ -24,13 +24,8 @@ if( array_key_exists( 'HTTP_HOST', $_SERVER ) )
                                             $_SERVER["HTTP_HOST"] );
 
 // the url of limesurvey and database information found in application/config/config.php
+$SETTINGS['path']['LIMESURVEY'] = '/path/to/limesurvey';
 $settings['url']['LIMESURVEY'] = '../limesurvey';
-$settings['survey_db']['driver'] = 'mysql'; // in components/db/connectionString
-$settings['survey_db']['server'] = 'localhost'; // in components/db/connectionString (do not include "host=")
-$settings['survey_db']['username'] = 'limesurvey'; // components/db/username
-$settings['survey_db']['password'] = ''; // components/db/password
-$settings['survey_db']['database'] = 'localhost'; // in components/db/connectionString
-$settings['survey_db']['prefix'] = ''; // components/db/tablePrefix
 
 // database settings (username and password are set in the application's settings)
 $settings['db']['server'] = 'localhost';
