Final revision of search functionality

--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "moment-timezone": "latest",
     "requirejs": "2.1.x",
     "angular-animate": "1.2.x",
+    "angular-sanitize": "1.2.x",
     "angular-slider": "0.2.x",
     "fullcalendar": "latest"
   }
