--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "angular-sanitize": "1.2.x",
     "angular-slider": "0.2.x",
     "angular-bootstrap-colorpicker": "latest",
-    "fullcalendar": "latest"
+    "fullcalendar": "latest",
+    "file-saver": "latest"
   }
 }
