Adding failover opal server feature
If the primary opal server doesn't respond the failsafe will be tried instead

--- a/settings.local.ini.php.sample
+++ b/settings.local.ini.php.sample
@@ -49,6 +49,15 @@ $settings['opal']['server'] = 'localhost';
 $settings['opal']['port'] = 8843;
 $settings['opal']['username'] = '';
 $settings['opal']['password'] = '';
+$settings['opal']['timeout'] = 5;
+
+// failover opal settings (used if opal times out)
+$settings['failover_opal']['enabled'] = false;
+$settings['failover_opal']['server'] = 'localhost';
+$settings['failover_opal']['port'] = 8843;
+$settings['failover_opal']['username'] = '';
+$settings['failover_opal']['password'] = '';
+$settings['failover_opal']['timeout'] = 5;
 
 // the Asterisk AJAM url, username and password
 $settings['voip']['enabled'] = false;
