Upgrading jQuery and ui-router
ui-router has some major changes which had to be addressed in the main cenozo.js file
Fixing bug where modal errors would show when already on an error page
Removing unused $state.last and $state.lastParams variables
Removing unused CnSession.pageTitle variable
Adding missing in-line documentation
Also removing lots of unused injections

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "dependencies": {
     "angular": "1.5.*",
     "angular-ui-bootstrap": "latest",
-    "angular-ui-router": "latest",
-    "jquery": "2.x",
+    "@uirouter/angularjs": "latest",
+    "jquery": "3.x",
     "bootstrap": "3.x",
     "moment": "latest",
     "moment-timezone": "latest",
