--- a/settings.local.ini.php.sample
+++ b/settings.local.ini.php.sample
@@ -25,6 +25,9 @@ else if( array_key_exists( 'HTTP_HOST', $_SERVER ) )
   $host = $_SERVER['HTTP_HOST'];
 if( !is_null( $host ) ) $settings['url']['CENOZO'] = sprintf( 'https://%s/url/to/cenozo', $host );
 
+// the location of the PDF-writing mikehaertl libraries (only add if using the pdf module)
+$settings['path']['MIKEHAERTL'] = '/path/to/mikehaertl';
+
 // the path and url of Limesurvey (only add if using the script module)
 $settings['path']['LIMESURVEY'] = '/path/to/limesurvey';
 $settings['url']['LIMESURVEY'] = '../limesurvey';
