--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "angular-animate": "1.5.x",
     "angular-sanitize": "1.5.x",
     "angular-bootstrap-colorpicker": "latest",
+    "angular-chart.js": "latest",
     "fullcalendar": "latest",
-    "file-saver": "latest"
+    "file-saver": "1.3.3"
   },
   "scripts": {
     "preinstall": "node preinstall.js",
