--- a/package.json
+++ b/package.json
@@ -13,20 +13,20 @@
     "url": "https://github.com/patrickdemond/cenozo"
   },
   "dependencies": {
-    "angular": "1.5.*",
+    "angular": "latest",
     "angular-ui-bootstrap": "latest",
     "@uirouter/angularjs": "latest",
-    "jquery": "3.x",
+    "jquery": "latest",
     "bootstrap": "3.x",
     "moment": "latest",
     "moment-timezone": "latest",
     "requirejs": "latest",
-    "angular-animate": "1.5.x",
-    "angular-sanitize": "1.5.x",
+    "angular-animate": "latest",
+    "angular-sanitize": "latest",
     "angular-bootstrap-colorpicker": "latest",
     "angular-chart.js": "latest",
     "fullcalendar": "latest",
-    "file-saver": "1.3.3"
+    "file-saver": "latest"
   },
   "scripts": {
     "preinstall": "node preinstall.js",
