Adding new CnAudioRecordingFactory

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "angular-bootstrap-colorpicker": "latest",
     "angular-chart.js": "latest",
     "fullcalendar": "latest",
-    "file-saver": "latest"
+    "file-saver": "latest",
+    "web-audio-recorder-js": "latest"
   },
   "scripts": {
     "preinstall": "node preinstall.js",
