Adding the diff library

--- a/package.json
+++ b/package.json
@@ -13,20 +13,21 @@
     "url": "https://github.com/patrickdemond/cenozo"
   },
   "dependencies": {
-    "angular": "latest",
-    "angular-ui-bootstrap": "latest",
     "@uirouter/angularjs": "latest",
-    "jquery": "latest",
+    "angular": "latest",
+    "angular-animate": "latest",
+    "angular-bootstrap-colorpicker": "latest",
+    "angular-chart.js": "latest",
+    "angular-sanitize": "latest",
+    "angular-ui-bootstrap": "latest",
     "bootstrap": "3.x",
+    "diff": "^5.0.0",
+    "file-saver": "latest",
+    "fullcalendar": "latest",
+    "jquery": "latest",
     "moment": "latest",
     "moment-timezone": "latest",
     "requirejs": "latest",
-    "angular-animate": "latest",
-    "angular-sanitize": "latest",
-    "angular-bootstrap-colorpicker": "latest",
-    "angular-chart.js": "latest",
-    "fullcalendar": "latest",
-    "file-saver": "latest",
     "web-audio-recorder-js": "latest"
   },
   "scripts": {
