Feature: installing JSONPath (for Pine)

--- a/src/composer.json
+++ b/src/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "phpoffice/phpspreadsheet": "^1.29",
-        "mikehaertl/php-pdftk": "^0.13.0"
+        "mikehaertl/php-pdftk": "^0.13.0",
+        "flow/jsonpath": "^0.5.0"
     }
 }
