--- a/package.json
+++ b/package.json
@@ -29,10 +29,7 @@
     "moment": "latest",
     "moment-timezone": "latest",
     "requirejs": "latest",
-    "web-audio-recorder-js": "latest"
-  },
-  "scripts": {
-    "preinstall": "node preinstall.js",
-    "postinstall": "node postinstall.js"
+    "web-audio-recorder-js": "latest",
+    "jsonpath": "latest"
   }
 }
